--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=employee
-spring.datasource.url=jdbc:postgresql://localhost:5432/emp_db
-spring.datasource.username=postgres
-spring.datasource.password=kani
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Render uses PORT
+server.port=${PORT}
