--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=employee
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+# Database (Render OR Local)
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5432/${DB_NAME:emp_db}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:kani}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Render uses PORT
-server.port=${PORT}
+# Server port: Render uses $PORT, Local uses 8080
+server.port=${PORT:8080}
